<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AppWIZUT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_text">Mobile Application Developers</string>

    <string name="nav_calendar">Calendar</string>
    <string name="nav_announcements">Announcements</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_public_transport">Timetable</string>
    <string name="nav_plan_changes">Changes in schedule</string>
    <string name="nav_timetable">Schedule</string>

    <string name="mad_name">SSA Mobile Applications Developers</string>
    <string name="authors">Authors:</string>
    <string name="mentor">SSA patron:</string>
    <string name="contact">Contact: </string>
    <string name="app_info">App info:</string>
    <string name="app_version">App version: </string>
    <string name="legalNoticesTitle">\nLegal notices</string>
    <string name="legalNotices">Application use open source software:\n- Caldroid Copyright (c) 2013 by Roomorama Inc.\n- bus.avris.it\n\nLicense:\nCopyright 2015 Mobile Applications Developers WI ZUT\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="repo">Repository:</string>
    <string name="facebook_page_address">www.facebook.com/MADWIZUT</string>

    <string name="no_Internet">No connection with the web</string>

    <!-- Timetable -->
    <string name="show_pdf">Show PDF</string>
    <string name="downloading_pdf_schedule">Checking if PDF is up to date</string>
    <string name="cannot_download_pdf">Cannot download schedule PDF</string>
    <string name="cannot_open_pdf">Cannot open schedule PDF</string>

    <string-array name="week_days_short">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
    </string-array>
    <string name="timetable_unavailable">Cannot display the schedule in the app</string>
    <string name="timetable_not_configured">You have not chosen a group</string>


    <string name="card_see_more">... See more</string>

    <!--Settings Strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="download_groups_title">Group download</string>
    <string name="refreshing_body">Please wait &#8230;</string>

    <string name="pref_default_tab">Default card</string>
    <string name="tab_last_opened">Last opened</string>
    <string name="pref_default_language">Language</string>

    <string name="studies_type">Type of studies:</string>
    <string name="studies_degree">Field of studies:</string>
    <string name="studies_level">Degree of studies:</string>
    <string name="studies_year">Year of studies:</string>
    <!-- TODO: Deduplicate -->
    <string name="studies_group">Group:</string>
    <string name="setting_group">Group</string>
    <string name="choose_group">Choose group</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>

    <string name="about_title">About us</string>
    <string name="empty_group">empty</string>
    <string name="cannot_download_groups">No groups or download is not possible</string>
    <string name="application_settings">Application settings</string>
    <string name="timetable_settings">Schedule</string>

    <string name="data_not_available">Data not available</string>

    <string name="add_bus">Add bus stop</string>
    <string name="add_bus_choose_line_title">Choose line</string>
    <string name="add_bus_choose_stop_title">Line <xliff:g id="line" example="7">%s</xliff:g></string>
    <string name="add_bus_direction">Direction: <xliff:g id="bus_destination" example="Stocznia Szczecińska">%s</xliff:g></string>
    <string name="add_bus_added">Added to timetable</string>
    <string name="add_bus_already_exist">This stop was already in your timetable</string>

    <string name="remove_bus_message">Removed</string>
    <string name="remove_bus_undo">Undo</string>
    <string name="no_data">No data</string>
    <string name="import_from_edziekanat">Import from E-Dziekanat</string>
    <string name="please_wait">Please wait</string>

    <string name="commit_hash">Commit hash</string>
    <string name="email_contact">mad@zut.edu.pl</string>
    <string name="repo_link">github.com/MADWI/AppWIZUT2/</string>
    <string name="events">Events</string>
    <string name="classes">Classes</string>
    <string name="no_events">No events</string>
    <string name="no_classes">No classes</string>

    <string name="widget_settings_category">Widget</string>
    <string name="update_interval">Widget refresh interval</string>
    <string name="update_interval_none">Don\'t auto refresh</string>
    <string name="update_interval_0_5h">Every 30 minutes</string>
    <string name="update_interval_1h">Every hour</string>
    <string name="update_interval_2h">Every 2 hours</string>
    <string name="update_interval_4h">Every 4 hours</string>
    <string name="update_interval_24h">Every 24 hours</string>

</resources>
