<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
        <item
            android:id="@+id/timetable"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_timetable"/>
        <item
            android:id="@+id/plan_changes"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/nav_plan_changes"/>
        <item
            android:id="@+id/event_calendar"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_calendar"/>
        <item
            android:id="@+id/announcements"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/nav_announcements"/>
        <item
            android:id="@+id/public_transport"
            android:icon="@drawable/ic_directions_subway_black_24dp"
            android:title="@string/nav_public_transport"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"
            android:checkable="false" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/nav_about_us"/>
    </group>
</menu>
