<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- Default tab -->


    <pl.edu.zut.mad.appwizut2.fragments.MyPreferenceCategory android:title="@string/application_settings" />
        <ListPreference
            android:background="@color/colorPrimaryBright"
            android:key="default_tab"
            android:title="@string/pref_default_tab"
            android:summary="%s"
            android:defaultValue="___"
            android:entries="@array/pref_default_tab_titles"
            android:entryValues="@array/pref_default_tab_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

<!--
        <ListPreference
            android:background="@color/colorPrimaryBright"
            android:key="default_language"
            android:title="@string/pref_default_language"
            android:defaultValue="system"
            android:summary="%s"
            android:entries="@array/pref_languages_list"
            android:entryValues="@array/pref_default_languages_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>
-->

    <pl.edu.zut.mad.appwizut2.fragments.MyPreferenceCategory android:title="@string/timetable_settings" />
        <Preference
            android:background="@color/colorPrimaryBright"
            android:key="groups"
            android:title="@string/setting_group" />
        <Preference
            android:background="@color/colorPrimaryBright"
            android:key="import_from_edziekanat"
            android:title="@string/import_from_edziekanat" />

    <pl.edu.zut.mad.appwizut2.fragments.MyPreferenceCategory android:title="@string/widget_settings_category" />
        <ListPreference
            android:background="@color/colorPrimaryBright"
            android:key="widget_update_millis"
            android:title="@string/update_interval"
            android:summary="%s"
            android:defaultValue="86400000"
            android:entries="@array/update_interval_descriptions"
            android:entryValues="@array/update_interval_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

</PreferenceScreen>
