<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBright">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/mad_name"
            android:id="@+id/mad_name"
            android:textColor="@color/textGray"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mad_team_photo"
            android:layout_below="@+id/mad_name"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mad_team"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textSize="25dp"
            android:id="@+id/authors"
            android:layout_marginTop="5dp"
            android:textColor="@color/textGray"
            android:layout_below="@+id/mad_team_photo"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Sara Anku \n Michał Bednarski \n Dawid Heyman \n Marcin Jóźwiak \n Bartosz Kozajda \n Marek Macko \n Damian Malarczyk \n Waldemar Sambor"
            android:id="@+id/authors_names"
            android:layout_below="@+id/authors"
            android:textSize="15dp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/mentor"
            android:id="@+id/mentor"
            android:textColor="@color/textGray"
            android:layout_below="@+id/authors_names"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" dr. inż. Radosław Maciaszczyk"
            android:id="@+id/mentor_name"
            android:layout_below="@+id/mentor"
            android:textSize="15dp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/contact"
            android:id="@+id/contact"
            android:textColor="@color/textGray"
            android:layout_below="@+id/mentor_name"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" www.mad.zut.edu.pl \n mad@zut.edu.pl"
            android:id="@+id/contact_strings"
            android:layout_below="@+id/contact"
            android:textSize="15dp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textGray" />


    </RelativeLayout>
</ScrollView>